fix package structre

--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "tokenit",
+  "description": "simple code like tokenizer",
   "version": "0.0.1",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "prepack": "npm run build",
-    "start": "node dev-server.js"
+    "start": "node scripts/dev-server.js"
+  },
+  "devDependencies": {
+    "typescript": "~4.0.2"
   },
   "keywords": [
     "parser",
@@ -17,13 +22,10 @@
   ],
   "files": [
     "src",
-    "dist",
-    "LICENCE"
+    "dist"
   ],
-  "author": "Barak Igal",
+  "author": "Wix.com",
   "license": "MIT",
-  "devDependencies": {
-    "typescript": "^4.0.2"
-  },
-  "description": "simple code like tokenizer"
+  "repository": "https://github.com/wixplosives/tokenit",
+  "prettier": {}
 }
