--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tokenit",
+  "name": "toky",
   "description": "simple code like tokenizer",
   "version": "0.0.1",
   "main": "dist/index.js",
@@ -26,6 +26,6 @@
   ],
   "author": "Wix.com",
   "license": "MIT",
-  "repository": "https://github.com/wixplosives/tokenit",
+  "repository": "https://github.com/wixplosives/toky",
   "prettier": {}
 }
