add some tests to core

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,17 +1,22 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Dev Server",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "program": "${workspaceFolder}//dev-server.js"
-        }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Dev Server",
+      "skipFiles": ["<node_internals>/**"],
+      "program": "${workspaceFolder}//scripts//dev-server.js"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Tests",
+      "skipFiles": ["<node_internals>/**"],
+      "args": ["-r", "@ts-tools/node/r", "${workspaceFolder}//test/index.spec.ts"]
+    }
+  ]
 }
