--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node -r @ts-tools/node/r test/index.spec.ts",
     "build": "tsc",
     "prepack": "npm run build",
     "start": "node scripts/dev-server.js"
   },
   "devDependencies": {
+    "@ts-tools/node": "^2.1.1",
     "typescript": "~4.0.2"
   },
   "keywords": [
