--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "devDependencies": {
     "@ts-tools/node": "^2.1.1",
+    "chai": "^4.2.0",
+    "mocha": "^8.2.1",
     "rimraf": "^3.0.2",
     "typescript": "~4.0.2"
   },
@@ -30,5 +32,9 @@
   "author": "Wix.com",
   "license": "MIT",
   "repository": "https://github.com/wixplosives/toky",
-  "prettier": {}
+  "prettier": {},
+  "dependencies": {
+    "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.2.0"
+  }
 }
