--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "node -r @ts-tools/node/r test/index.spec.ts",
+    "test": "mocha -r @ts-tools/node/r test/**/*.spec.ts",
+    "test:mocha": "mocha -r @ts-tools/node/r",
     "typecheck": "tsc --noEmit",
     "build": "rimraf dist && tsc -p tsconfig.build.json",
     "prepack": "npm run build",
@@ -13,6 +14,8 @@
   },
   "devDependencies": {
     "@ts-tools/node": "^2.1.1",
+    "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.2.0",
     "chai": "^4.2.0",
     "mocha": "^8.2.1",
     "rimraf": "^3.0.2",
@@ -32,9 +35,5 @@
   "author": "Wix.com",
   "license": "MIT",
   "repository": "https://github.com/wixplosives/toky",
-  "prettier": {},
-  "dependencies": {
-    "@types/chai": "^4.2.14",
-    "@types/mocha": "^8.2.0"
-  }
+  "prettier": {}
 }
