add selector node and view support

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "node -r @ts-tools/node/r test/index.spec.ts",
     "typecheck": "tsc --noEmit",
-    "build": "npm run typecheck && rimraf dist && tsc -p tsconfig.build.json",
+    "build": "rimraf dist && tsc -p tsconfig.build.json",
     "prepack": "npm run build",
     "start": "node scripts/dev-server.js"
   },
