--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,8 +22,11 @@
     "src",
     "dist"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "author": "Wix.com",
   "license": "MIT",
-  "repository": "https://github.com/wixplosives/toky",
+  "repository": "https://github.com/wixplosives/toky/packages/core",
   "prettier": {}
 }
