--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "toky",
+  "name": "toky-repo",
   "private": true,
   "workspaces": [
     "packages/*"
@@ -21,6 +21,7 @@
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "lerna": "^4.0.0",
+    "prettier": "^2.3.1",
     "rimraf": "^3.0.2",
     "typescript": "~4.1.5"
   },
