start transition to mocha

--- a/packages/toky/package.json
+++ b/packages/toky/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "node -r @ts-tools/node/r test/index.spec.ts",
+    "test": "mocha \"./dist/test/**/*.spec.js\"",
     "typecheck": "tsc --noEmit",
     "build": "rimraf dist && tsc",
     "prepack": "npm run build",
