--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   },
   "devDependencies": {
     "@ts-tools/node": "^2.1.1",
+    "@types/mocha": "^8.2.2",
     "@types/node": "12",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "lerna": "^4.0.0",
+    "mocha": "^9.0.0",
     "prettier": "^2.3.1",
     "rimraf": "^3.0.2",
     "typescript": "~4.1.5"
