--- a/packages/toky/package.json
+++ b/packages/toky/package.json
@@ -8,7 +8,6 @@
     "build": "rimraf dist && tsc",
     "prepack": "npm run build",
     "test": "mocha \"./dist/test/**/*.spec.js\"",
-    "typecheck": "tsc --noEmit",
     "start": "node scripts/dev-server.js"
   },
   "keywords": [
@@ -20,10 +19,12 @@
   ],
   "files": [
     "src",
-    "dist"
+    "dist",
+    "!dist/test",
+    "!*/tsconfig.{json,tsbuildinfo}"
   ],
   "author": "Wix.com",
   "license": "MIT",
-  "repository": "https://github.com/wixplosives/toky/packages/core",
+  "repository": "https://github.com/wixplosives/toky/packages/toky",
   "prettier": {}
 }
