--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "toky-repo",
+  "name": "tokey-root",
   "private": true,
   "workspaces": [
     "packages/*"
@@ -31,7 +31,7 @@
   "engines": {
     "node": ">=12"
   },
-  "repository": "git@github.com:wixplosives/toky.git",
+  "repository": "git@github.com:wixplosives/tokey.git",
   "author": "Wix.com",
   "license": "MIT"
 }
