--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "toky",
+  "name": "@tokey/core",
   "description": "simple code like tokenizer",
   "version": "1.0.0",
   "main": "dist/index.js",
@@ -24,6 +24,6 @@
   ],
   "author": "Wix.com",
   "license": "MIT",
-  "repository": "https://github.com/wixplosives/toky/packages/toky",
+  "repository": "https://github.com/wixplosives/tokey/packages/core",
   "prettier": {}
 }
