--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "files": [],
   "references": [
-    { "path": "./packages/toky/src" },
-    { "path": "./packages/toky/test" },
+    { "path": "./packages/core/src" },
+    { "path": "./packages/core/test" },
     { "path": "./packages/test-kit/src" },
     { "path": "./packages/css-selector-parser/src" },
     { "path": "./packages/css-selector-parser/test" }
