--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-prettier": "^8.3.0",
     "lerna": "^4.0.0",
     "mocha": "^9.0.0",
+    "pleb": "^3.4.4",
     "prettier": "^2.3.1",
     "rimraf": "^3.0.2",
     "typescript": "~4.1.5"
