infra: set public access for published packages

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,6 +20,9 @@
     "!dist/test",
     "!*/tsconfig.{json,tsbuildinfo}"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "author": "Wix.com",
   "license": "MIT",
   "repository": "https://github.com/wixplosives/tokey/packages/core",
