--- a/packages/css-selector-parser/package.json
+++ b/packages/css-selector-parser/package.json
@@ -21,6 +21,9 @@
     "!dist/test",
     "!*/tsconfig.{json,tsbuildinfo}"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "author": "Wix.com",
   "license": "MIT",
   "repository": "https://github.com/wixplosives/tokey/packages/css-selector-parser",
