--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "toky-repo",
+  "name": "tokey-root",
   "private": true,
   "workspaces": [
     "packages/*"
@@ -11,7 +11,8 @@
     "lint": "eslint . -f codeframe",
     "pretest": "yarn build && yarn lint",
     "test": "lerna run test --stream",
-    "prettify": "npx prettier . --write"
+    "prettify": "npx prettier . --write",
+    "start": "node scripts/dev-server.js"
   },
   "devDependencies": {
     "@ts-tools/node": "^2.1.1",
@@ -23,6 +24,7 @@
     "eslint-config-prettier": "^8.3.0",
     "lerna": "^4.0.0",
     "mocha": "^9.0.0",
+    "pleb": "^3.4.4",
     "prettier": "^2.3.1",
     "rimraf": "^3.0.2",
     "typescript": "~4.1.5"
@@ -30,7 +32,7 @@
   "engines": {
     "node": ">=12"
   },
-  "repository": "git@github.com:wixplosives/toky.git",
+  "repository": "git@github.com:wixplosives/tokey.git",
   "author": "Wix.com",
   "license": "MIT"
 }
