--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,5 +26,6 @@
   "author": "Wix.com",
   "license": "MIT",
   "repository": "https://github.com/wixplosives/tokey/packages/core",
-  "prettier": {}
+  "prettier": {},
+  "sideEffects": false
 }
