--- a/packages/css-selector-parser/package.json
+++ b/packages/css-selector-parser/package.json
@@ -27,5 +27,6 @@
   "author": "Wix.com",
   "license": "MIT",
   "repository": "https://github.com/wixplosives/tokey/packages/css-selector-parser",
-  "prettier": {}
+  "prettier": {},
+  "sideEffects": false
 }
