--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tokey/core",
   "description": "simple code like tokenizer",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -26,5 +26,6 @@
   "author": "Wix.com",
   "license": "MIT",
   "repository": "https://github.com/wixplosives/tokey/packages/core",
-  "prettier": {}
+  "prettier": {},
+  "sideEffects": false
 }
