--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     { "path": "./packages/test-kit/src" },
     { "path": "./packages/test-kit/test" },
     { "path": "./packages/css-selector-parser/src" },
-    { "path": "./packages/css-selector-parser/test" }
+    { "path": "./packages/css-selector-parser/test" },
+    { "path": "./packages/imports-parser/src" },
+    { "path": "./packages/imports-parser/test" }
   ]
 }
