--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "rimraf ./packages/*/{dist,cjs,esm}",
     "build": "tsc --build",
     "watch": "yarn build -w",
-    "lint": "eslint . -f codeframe",
+    "lint": "eslint .",
     "pretest": "yarn build && yarn lint",
     "test": "lerna run test --stream",
     "prettify": "npx prettier . --write",
@@ -19,16 +19,16 @@
     "@types/chai": "^4.2.22",
     "@types/mocha": "^9.0.0",
     "@types/node": "12",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "chai": "^4.3.4",
-    "eslint": "^7.32.0",
+    "eslint": "^8.0.0",
     "eslint-config-prettier": "^8.3.0",
     "lerna": "^4.0.0",
     "mocha": "^9.1.2",
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
-    "typescript": "~4.4.3"
+    "typescript": "~4.4.4"
   },
   "engines": {
     "node": ">=12"
