chore(deps): latest stable; reformat all - remove package-specific prettier configs and instead let the root one take over - regenerate lock file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
     { "path": "./packages/url-tokenizer/src" },
     { "path": "./packages/url-tokenizer/test" },
     { "path": "./packages/experiments/src" },
-    { "path": "./packages/experiments/test" },
+    { "path": "./packages/experiments/test" }
   ]
 }
