--- a/packages/imports-parser/package.json
+++ b/packages/imports-parser/package.json
@@ -26,6 +26,5 @@
   },
   "author": "Wix.com",
   "license": "MIT",
-  "repository": "https://github.com/wixplosives/tokey/packages/imports-parser",
-  "prettier": {}
+  "repository": "https://github.com/wixplosives/tokey/packages/imports-parser"
 }
