--- a/packages/url-tokenizer/package.json
+++ b/packages/url-tokenizer/package.json
@@ -26,6 +26,5 @@
   },
   "author": "Wix.com",
   "license": "MIT",
-  "repository": "https://github.com/wixplosives/tokey/packages/url-tokenizer",
-  "prettier": {}
+  "repository": "https://github.com/wixplosives/tokey/packages/url-tokenizer"
 }
