chore(deps-dev): upgrade to latest stable - ensure lint doesn't require build - add missing tsconfig to demos/client - regenerate lock file

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,8 @@
     {
       "files": ["*.ts", "*.tsx"],
       "parserOptions": {
-        "project": "./tsconfig.base.json"
+        "project": ["packages/*/{src,test}/tsconfig.json", "demos/client/tsconfig.json"],
+        "EXPERIMENTAL_useSourceOfProjectReferenceRedirect": true
       },
       "extends": [
         "plugin:@typescript-eslint/recommended",
