--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "packages/*"
   ],
   "scripts": {
-    "clean": "rimraf ./packages/*/{dist,cjs,esm}",
+    "clean": "rimraf \"./packages/*/{dist,cjs,esm}\" \"./demos/dist\"",
     "build": "tsc --build",
     "watch": "npm run build -- -w",
     "lint": "eslint .",
-    "pretest": "npm run build && npm run lint",
+    "pretest": "npm run lint && npm run build",
     "test": "mocha \"./packages/*/dist/test/**/*.spec.js\"",
     "prettify": "npx prettier . --write",
     "start": "node scripts/dev-server.js"
@@ -19,8 +19,8 @@
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
     "@types/node": "12",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
-    "@typescript-eslint/parser": "^5.8.0",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
     "chai": "^4.3.4",
     "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
