--- a/demos/client/tsconfig.json
+++ b/demos/client/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "../dist"
-  }
+    "outDir": "../dist",
+    "noEmit": true
+  },
+  "references": [{ "path": "../../packages/css-value-parser/src" }]
 }
