--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -7,14 +7,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Use Node.js 18
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version-file: ".nvmrc"
           registry-url: 'https://registry.npmjs.org/'
           cache: npm
       - run: npm ci
       - run: npm run build
-      - run: npx pleb@5 publish
+      - run: npx pleb@7 publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
