--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,18 +2,18 @@ name: tests
 on: [push, pull_request]
 jobs:
   tests:
-    name: node ${{ matrix.node-version }} / ${{ matrix.os }}
+    name: ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 5
     strategy:
+      fail-fast: false
       matrix:
-        node-version: [18]
         os: [ubuntu-latest, windows-latest, macOS-latest]
     steps:
       - uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version-file: ".nvmrc"
           cache: npm
       - run: npm ci
       - run: npm test
