--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint",
     "pretest": "npm run lint && npm run build",
     "test": "mocha \"./packages/*/dist/test/**/*.spec.js\"",
-    "prettify": "npx prettier . --write",
+    "prettify": "prettier . --write",
     "start": "node scripts/dev-server.js"
   },
   "devDependencies": {
