--- a/demos/client/tsconfig.json
+++ b/demos/client/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "../dist",
+    "lib": ["es2023", "dom"],
     "noEmit": true
   },
   "references": [{ "path": "../../packages/css-value-parser/src" }]
