feat!: use package "exports" instead of "main" to avoid everything being public by default
had to open two extra entrypoints for unit tests. can be removed one we move "test" folder into "src"

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,8 +2,11 @@
   "name": "@tokey/core",
   "description": "simple code like tokenizer",
   "version": "1.4.0",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "exports": {
+    ".": "./dist/index.js",
+    "./helpers": "./dist/helpers.js",
+    "./package.json": "./package.json"
+  },
   "scripts": {
     "test": "mocha \"./dist/test/**/*.spec.js\""
   },
