--- a/packages/css-selector-parser/package.json
+++ b/packages/css-selector-parser/package.json
@@ -2,8 +2,10 @@
   "name": "@tokey/css-selector-parser",
   "description": "selector parser for css",
   "version": "0.6.2",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "exports": {
+    ".": "./dist/index.js",
+    "./package.json": "./package.json"
+  },
   "scripts": {
     "test": "mocha \"./dist/test/**/*.spec.js\""
   },
