--- a/packages/css-value-parser/package.json
+++ b/packages/css-value-parser/package.json
@@ -2,8 +2,11 @@
   "name": "@tokey/css-value-parser",
   "description": "value parser for css",
   "version": "0.1.4",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "exports": {
+    ".": "./dist/index.js",
+    "./value-syntax-parser": "./dist/value-syntax-parser.js",
+    "./package.json": "./package.json"
+  },
   "scripts": {
     "test": "mocha \"./dist/test/**/*.spec.js\""
   },
