--- a/packages/experiments/package.json
+++ b/packages/experiments/package.json
@@ -3,8 +3,10 @@
   "name": "@tokey/experiments",
   "description": "experimental tokenizers and parsers",
   "version": "0.1.0",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "exports": {
+    ".": "./dist/index.js",
+    "./package.json": "./package.json"
+  },
   "scripts": {
     "test": "mocha \"./dist/test/**/*.spec.js\""
   },
