feat: improve "repository" field of packages includes path within repo, for easy link in npmjs.com npm will no longer warn when publishing

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,6 +27,10 @@
   },
   "author": "Wix.com",
   "license": "MIT",
-  "repository": "https://github.com/wixplosives/tokey/packages/core",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wixplosives/tokey.git",
+    "directory": "packages/core"
+  },
   "sideEffects": false
 }
