--- a/packages/css-selector-parser/package.json
+++ b/packages/css-selector-parser/package.json
@@ -28,6 +28,10 @@
   },
   "author": "Wix.com",
   "license": "MIT",
-  "repository": "https://github.com/wixplosives/tokey/packages/css-selector-parser",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wixplosives/tokey.git",
+    "directory": "packages/css-selector-parser"
+  },
   "sideEffects": false
 }
