--- a/packages/imports-parser/package.json
+++ b/packages/imports-parser/package.json
@@ -28,5 +28,9 @@
   },
   "author": "Wix.com",
   "license": "MIT",
-  "repository": "https://github.com/wixplosives/tokey/packages/imports-parser"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wixplosives/tokey.git",
+    "directory": "packages/imports-parser"
+  }
 }
