fix: avoid publishing src/test introduced when moved "test" into "src"

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -19,7 +19,7 @@
   "files": [
     "src",
     "dist",
-    "!dist/test",
+    "!*/test",
     "!*/tsconfig.{json,tsbuildinfo}"
   ],
   "publishConfig": {
