--- a/packages/imports-parser/package.json
+++ b/packages/imports-parser/package.json
@@ -20,7 +20,7 @@
   "files": [
     "src",
     "dist",
-    "!dist/test",
+    "!*/test",
     "!*/tsconfig.{json,tsbuildinfo}"
   ],
   "publishConfig": {
