--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@types/chai": "^4.3.20",
     "@types/mocha": "^10.0.10",
     "@types/node": "22",
-    "@webref/css": "~6.16.1",
+    "@webref/css": "^6.18.0",
     "chai": "^4.3.10",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
